[package]
name = "purple"
version = "0.0.1-placeholder"
authors = ["jaynus <jaynus@gmail.com>"]
edition = "2018"
description = "placeholder for a library"
license = "MIT"

[features]

[dependencies]
log = "0.4"
serde = { version = "1", optional = true }
derivative = "1.0"
rayon = "1.2"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.7"
