[package]
name = "purple"
version = "0.0.1-placeholder"
authors = ["jaynus <jaynus@gmail.com>"]
edition = "2018"
description = "placeholder for a library"
license = "MIT"

[features]
nightly = [ "packed_simd" ]

[dependencies]
serde = { version = "1", optional = true }
derivative = "1"
packed_simd = { version = "0.3", optional = true }

[dev-dependencies]
rayon = "1.2"